[gd_scene load_steps=20 format=3 uid="uid://wmd12yahcqgr"]

[ext_resource type="Script" path="res://Minigames/Spread_Out/Spread_Out_Minigame.gd" id="1_6365x"]
[ext_resource type="PackedScene" uid="uid://c0sq3n0ak4kcj" path="res://Minigames/Spread_Out/area_circle.tscn" id="2_xbvk2"]
[ext_resource type="PackedScene" uid="uid://d3fhdrpflwbm5" path="res://Minigames/Spread_Out/area_square.tscn" id="4_1irq1"]
[ext_resource type="PackedScene" uid="uid://chsc0tf1uytta" path="res://Minigames/Spread_Out/square.tscn" id="4_p3j3e"]
[ext_resource type="PackedScene" uid="uid://c6w8llo402wyi" path="res://Minigames/Spread_Out/triangle.tscn" id="5_j2hpk"]
[ext_resource type="PackedScene" uid="uid://dojhm07by55it" path="res://Minigames/Spread_Out/circle.tscn" id="5_w8y3q"]
[ext_resource type="Script" path="res://Minigames/Spread_Out/Mini_game_timer.gd" id="8_4tmaa"]
[ext_resource type="PackedScene" uid="uid://b74uop864jp1f" path="res://Minigames/Spread_Out/area_triangle.tscn" id="8_d0pdb"]
[ext_resource type="Script" path="res://Minigames/Spread_Out/Transitions.gd" id="9_li7ca"]
[ext_resource type="FontFile" uid="uid://ctxvr2siy75fd" path="res://Minigames/Weed_Killer/pixely_font.ttf" id="9_xvec6"]
[ext_resource type="Texture2D" uid="uid://6nmi7340woxa" path="res://MainMenu/butter_knife.png" id="10_8o7ca"]
[ext_resource type="Script" path="res://Minigames/Weed_Killer/scripts/GlobalScoreLabel.gd" id="10_e4ou5"]

[sub_resource type="LabelSettings" id="LabelSettings_4efak"]
font_size = 28
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5pbsm"]
font_size = 28
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_d6rcr"]

[sub_resource type="Animation" id="Animation_7ax0f"]
resource_name = "Fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 5.27803),
"update": 0,
"values": [Color(1, 0.941176, 0.478431, 1), Color(1, 0.941176, 0.478431, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i0su1"]
_data = {
"Fade_in": SubResource("Animation_7ax0f")
}

[sub_resource type="Animation" id="Animation_81gi7"]
resource_name = "Move down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.933033),
"update": 0,
"values": [Vector2(0, -3.045), Vector2(0, 700)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6ciy"]
_data = {
"Move down": SubResource("Animation_81gi7")
}

[node name="Spread_Out_Minigame" type="Node2D" node_paths=PackedStringArray("transitioner")]
position = Vector2(1, -1)
script = ExtResource("1_6365x")
transitioner = NodePath("Transitions")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="area_circle" parent="." groups=["Circle"] instance=ExtResource("2_xbvk2")]
position = Vector2(-37, 9)
scale = Vector2(2, 2)

[node name="area_square" parent="." groups=["Square"] instance=ExtResource("4_1irq1")]
position = Vector2(52, -27)
scale = Vector2(2, 2)

[node name="area_triangle" parent="." groups=["Triangle"] instance=ExtResource("8_d0pdb")]
position = Vector2(-41, 69)
scale = Vector2(2, 2)

[node name="Square" parent="." groups=["Circle", "dragable"] instance=ExtResource("4_p3j3e")]
position = Vector2(-3, -32)
scale = Vector2(2, 2)

[node name="Triangle" parent="." groups=["Circle", "dragable"] instance=ExtResource("5_j2hpk")]
position = Vector2(-37, -51)
scale = Vector2(2, 2)

[node name="Circle" parent="." groups=["dragable"] instance=ExtResource("5_w8y3q")]
position = Vector2(-69, -12)
scale = Vector2(2, 2)

[node name="WonText" type="Label" parent="."]
visible = false
offset_left = -80.0
offset_top = -69.0
offset_right = 12.0
offset_bottom = 15.0
scale = Vector2(1.82303, 1.32612)
text = "YOU
WON!"
label_settings = SubResource("LabelSettings_4efak")

[node name="MinigameText" type="Label" parent="."]
offset_left = -50.0
offset_top = -54.0
offset_right = 74.0
offset_bottom = 44.0
text = "Spread
Them!"
label_settings = SubResource("LabelSettings_5pbsm")

[node name="Timer" type="Timer" parent="."]

[node name="Mini_game_timer" type="Timer" parent="."]
script = ExtResource("8_4tmaa")

[node name="GlobalScoreLabel" type="Label" parent="Mini_game_timer"]
offset_left = -89.0
offset_top = -161.0
offset_right = 271.0
offset_bottom = -134.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("9_xvec6")
text = "Lives: "
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_e4ou5")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 72.0
offset_top = -163.0
offset_right = 112.0
offset_bottom = -137.0
text = "8"

[node name="Transitions" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_li7ca")

[node name="TextureRect" type="TextureRect" parent="Transitions"]
modulate = Color(1, 0.941176, 0.478431, 0.2)
layout_mode = 0
offset_left = -90.0
offset_top = -161.0
offset_right = 89.0
offset_bottom = 161.0
pivot_offset = Vector2(90, 160)
texture = SubResource("CanvasTexture_d6rcr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transitions"]
libraries = {
"": SubResource("AnimationLibrary_i0su1")
}

[node name="Transition" type="ColorRect" parent="."]
offset_left = -89.0
offset_top = -165.0
offset_right = 273.0
offset_bottom = 126.0
scale = Vector2(0.501343, -1.10295)
color = Color(1, 1, 0.631373, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
libraries = {
"": SubResource("AnimationLibrary_x6ciy")
}

[node name="ButterKnife" type="Sprite2D" parent="Transition"]
position = Vector2(179.216, 15.2461)
rotation = 1.57422
scale = Vector2(1.01901, -2.83032)
texture = ExtResource("10_8o7ca")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Mini_game_timer" to="Mini_game_timer" method="_on_timeout"]
